# serializer version: 1
# name: test_set_program_and_options[service_call0-set_selected_program-Washer]
  _Call(
    tuple(
      'SIEMENS-HCS03WCH1-7BC6383CF794',
    ),
    dict({
      'options': list([
        dict({
          'display_value': None,
          'key': <OptionKey.BSH_COMMON_START_IN_RELATIVE: 'BSH.Common.Option.StartInRelative'>,
          'name': None,
          'unit': None,
          'value': 1800,
        }),
      ]),
      'program_key': <ProgramKey.DISHCARE_DISHWASHER_ECO_50: 'Dishcare.Dishwasher.Program.Eco50'>,
    }),
  )
# ---
# name: test_set_program_and_options[service_call1-start_program-Washer]
  _Call(
    tuple(
      'SIEMENS-HCS03WCH1-7BC6383CF794',
    ),
    dict({
      'options': list([
        dict({
          'display_value': None,
          'key': <OptionKey.CONSUMER_PRODUCTS_COFFEE_MAKER_BEAN_AMOUNT: 'ConsumerProducts.CoffeeMaker.Option.BeanAmount'>,
          'name': None,
          'unit': None,
          'value': 'ConsumerProducts.CoffeeMaker.EnumType.BeanAmount.Normal',
        }),
      ]),
      'program_key': <ProgramKey.CONSUMER_PRODUCTS_COFFEE_MAKER_BEVERAGE_COFFEE: 'ConsumerProducts.CoffeeMaker.Program.Beverage.Coffee'>,
    }),
  )
# ---
# name: test_set_program_and_options[service_call2-set_active_program_options-Washer]
  _Call(
    tuple(
      'SIEMENS-HCS03WCH1-7BC6383CF794',
    ),
    dict({
      'array_of_options': dict({
        'options': list([
          dict({
            'display_value': None,
            'key': <OptionKey.CONSUMER_PRODUCTS_COFFEE_MAKER_COFFEE_MILK_RATIO: 'ConsumerProducts.CoffeeMaker.Option.CoffeeMilkRatio'>,
            'name': None,
            'unit': None,
            'value': 'ConsumerProducts.CoffeeMaker.EnumType.CoffeeMilkRatio.50Percent',
          }),
        ]),
      }),
    }),
  )
# ---
# name: test_set_program_and_options[service_call3-set_selected_program_options-Washer]
  _Call(
    tuple(
      'SIEMENS-HCS03WCH1-7BC6383CF794',
    ),
    dict({
      'array_of_options': dict({
        'options': list([
          dict({
            'display_value': None,
            'key': <OptionKey.CONSUMER_PRODUCTS_COFFEE_MAKER_FILL_QUANTITY: 'ConsumerProducts.CoffeeMaker.Option.FillQuantity'>,
            'name': None,
            'unit': None,
            'value': 35,
          }),
        ]),
      }),
    }),
  )
# ---
